add line times to api
